--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -15,3 +15,9 @@
   margin: 0px;
   padding: 0px;
 }
+@import url("~leaflet/dist/leaflet.css");
+.leaflet-container {
+  width: 100%;
+  height: 90vh;
+  overflow: hidden;
+}
